--- a/cs-guestbook/nuget.config
+++ b/cs-guestbook/nuget.config
@@ -2,6 +2,6 @@
 <configuration>
     <packageSources>
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-        <add key="Pulumi.K8sServiceDeployment" value="../multilanguage-packages/pulumi-k8s-servicedeployment/nuget" />
+        <add key="Pulumi.K8sServiceDeployment" value="../../../../Documents/demo-envs/customer-engineering/demos/multilanguage-packages/pulumi-k8s-servicedeployment/nuget" />
     </packageSources>
 </configuration>
