--- a/aws-ts-eks-guestbook/guestbook-app-ts/package.json
+++ b/aws-ts-eks-guestbook/guestbook-app-ts/package.json
@@ -4,7 +4,7 @@
         "@types/node": "^14"
     },
     "dependencies": {
-        "@pulumi/k8s-servicedeployment": "file:../../multilanguage-packages/pulumi-k8s-servicedeployment/sdk/nodejs/bin",
+        "@pulumi/k8s-servicedeployment": "file:../../../../Documents/demo-envs/customer-engineering/demos/multilanguage-packages/pulumi-k8s-servicedeployment/sdk/nodejs/bin",
         "@pulumi/pulumi": "^3.0.0"
     }
 }
