--- a/azure-ts-function-pulumi-web-hook/Pulumi.yaml
+++ b/azure-ts-function-pulumi-web-hook/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: azure-ts-functions
+name: azure-ts-pulumi-web-hook
 runtime: nodejs
-description: Creates and deploys an Azure Function App
+description: Creates and deploys an Azure Function App to use as a Pulumi webhook
