--- a/guestbook-various-languages-clouds/guestbook-app-ts/package.json
+++ b/guestbook-various-languages-clouds/guestbook-app-ts/package.json
@@ -4,7 +4,9 @@
         "@types/node": "^14"
     },
     "dependencies": {
-        "@pulumi/k8s-servicedeployment": "file:../../../../Documents/demo-envs/customer-engineering/demos/multilanguage-packages/pulumi-k8s-servicedeployment/sdk/nodejs/bin",
+        "@pulumi/aws": "^5.9.2",
+        "@pulumi/k8s-servicedeployment": "file:/Users/mitch/Documents/demo-envs/customer-engineering/demos/multilanguage-packages/pulumi-k8s-servicedeployment/sdk/nodejs/bin",
+        "@pulumi/kubernetes": "^3.19.4",
         "@pulumi/pulumi": "^3.0.0"
     }
 }
