--- a/guestbook-various-languages-clouds/guestbook-app-ts/Pulumi.staging.yaml
+++ b/guestbook-various-languages-clouds/guestbook-app-ts/Pulumi.staging.yaml
@@ -1,3 +1,4 @@
 config:
   guestbook-app-ts:eksProject: guestbook-base-eks-infra-ts
   guestbook-app-ts:org: demo
+  guestbook-app-ts:zoneName: pulumi-ce.team
