--- a/guestbook-various-languages-clouds/guestbook-app-yaml/Pulumi.dev.yaml
+++ b/guestbook-various-languages-clouds/guestbook-app-yaml/Pulumi.dev.yaml
@@ -1,3 +1,4 @@
 config:
   guestbook-app-yaml:eksProject: guestbook-base-gke-infra-go
   guestbook-app-yaml:org: demo
+  guestbook-app-yaml:zoneName: pulumi-ce.team
