--- a/py-yaml-mlc-ansible-wordpress/aws-py-ansible-wordpress/requirements.txt
+++ b/py-yaml-mlc-ansible-wordpress/aws-py-ansible-wordpress/requirements.txt
@@ -1,4 +1,6 @@
 pulumi>=3.0.0,<4.0.0
 pulumi-aws==5.8.0
 pulumi-command>=0.3.0
+ansible>=6.3.0
+## This path needs to match where you built the "WpInstance" MLC
 ../../../mlc-python-ec2_instance/sdk/python/bin
