--- a/py-yaml-mlc-ansible-wordpress/aws-yaml-ansible-wordpress/Pulumi.yaml
+++ b/py-yaml-mlc-ansible-wordpress/aws-yaml-ansible-wordpress/Pulumi.yaml
@@ -6,11 +6,9 @@ configuration:
   # A path to the EC2 keypair's public key:
   publicKeyPath:
     type: String
-    required: true
   # A path to the EC2 keypair's private key:
   privateKeyPath:
     type: String
-    required: true
   # The WordPress database size:
   dbInstanceSize:
     type: String
@@ -26,7 +24,6 @@ configuration:
   # The WordPress database user's password:
   dbPassword:
     type: String
-    required: true
     secret: true
   # The WordPress EC2 instance's size:
   ec2InstanceSize:
@@ -38,16 +35,6 @@ variables:
   availabilityZones:
     Fn::Invoke:
       Function: aws:getAvailabilityZones
-  # Dynamically query for the Amazon Linux 2 AMI in this region.
-  awsLinuxAmi:
-    Fn::Invoke:
-      Function: aws:ec2:getAmi
-      Arguments:
-        owners: ["amazon"]
-        filters:
-          - name: name
-            values: ["amzn2-ami-hvm-*-x86_64-ebs"]
-        mostRecent: true
   # Read in the public key for easy use below.
   publicKey:
     Fn::ReadFile: ${publicKeyPath}
@@ -64,7 +51,6 @@ resources:
       cidrBlock: 10.192.0.0/16
       enableDnsSupport: true # gives you an internal domain name
       enableDnsHostnames: true # gives you an internal host name
-      enableClassiclink: false
       instanceTenancy: default
   # Create public subnets for the EC2 instance.
   prod-subnet-public-1:
@@ -109,34 +95,14 @@ resources:
     properties:
       subnetId: ${prod-subnet-public-1.id}
       routeTableId: ${prod-public-rt.id}
-  # Security group for EC2:
-  ec2-allow-rule:
-    type: aws:ec2:SecurityGroup
+  # Wordpress Instance using Multilanguage Component Package
+  wp-instance:
+    type: wpinstance:mlc:WpInstance
     properties:
+      instanceType: ${ec2InstanceSize}
+      publicKey: ${publicKey}
+      subnetId: ${prod-subnet-public-1.id}
       vpcId: ${prod-vpc.id}
-      ingress:
-        - description: "HTTPS"
-          fromPort: 443
-          toPort: 443
-          protocol: "tcp"
-          cidrBlocks: [0.0.0.0/0]
-        - description: "HTTP"
-          fromPort: 80
-          toPort: 80
-          protocol: "tcp"
-          cidrBlocks: [0.0.0.0/0]
-        - description: "SSH"
-          fromPort: 22
-          toPort: 22
-          protocol: "tcp"
-          cidrBlocks: [0.0.0.0/0]
-      egress:
-         - fromPort: 0
-           toPort: 0
-           protocol: "-1"
-           cidrBlocks: [0.0.0.0/0]
-      tags:
-        Name: "allow ssh,http,https"
   # Security group for RDS:
   rds-allow-rule:
     type: aws:ec2:SecurityGroup
@@ -147,7 +113,7 @@ resources:
           fromPort: 3306
           toPort: 3306
           protocol: "tcp"
-          securityGroups: ["${ec2-allow-rule.id}"]
+          securityGroups: ["${wp-instance.secruleId}"]
       # Allow all outbound traffic.
       egress:
         - fromPort: 0
@@ -177,32 +143,7 @@ resources:
       username: ${dbUsername}
       password: ${dbPassword}
       skipFinalSnapshot: true
-  # Create a keypair to access the EC2 instance:
-  wordpress-keypair:
-    type: aws:ec2:KeyPair
-    properties:
-      publicKey: ${publicKey}
-  # Create an EC2 instance to run Wordpress (after RDS is ready).
-  wordpress-instance:
-    type: aws:ec2:Instance
-    properties:
-      ami: ${awsLinuxAmi.id}
-      instanceType: ${ec2InstanceSize}
-      subnetId: ${prod-subnet-public-1.id}
-      vpcSecurityGroupIds: ["${ec2-allow-rule.id}"]
-      keyName: ${wordpress-keypair.id}
-      tags:
-        Name: "Wordpress.web"
-    options:
-      dependsOn:
-        # Only create after RDS is provisioned.
-        - ${wordpressdb}
-  # Give our EC2 instance an elastic IP address.
-  wordpress-eip:
-    type: aws:ec2:Eip
-    properties:
-      instance: ${wordpress-instance.id}
-
+  
   # Render the Ansible playbook using RDS info.
   renderPlaybookCmd:
     type: command:local:Command
@@ -219,7 +160,7 @@ resources:
     type: command:remote:Command
     properties:
       connection:
-        host: ${wordpress-eip.publicIp}
+        host: ${wp-instance.wpinstanceIp}
         port: 22
         user: ec2-user
         privateKey: ${privateKey}
@@ -234,7 +175,7 @@ resources:
     properties:
       create: "ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook
         -u ec2-user
-        -i '${wordpress-eip.publicIp},'
+        -i '${wp-instance.wpinstanceIp},'
         --private-key ${privateKeyPath}
         playbook_rendered.yml"
     options:
@@ -244,4 +185,4 @@ resources:
 
 # Export the resulting wordpress EIP for easy access.
 outputs:
-  url: ${wordpress-eip.publicIp}
+  url: http://${wp-instance.wpinstanceIp}
