--- a/ts-gcp-docker-gcr-cloudrun-automation/cloud-run-deploy/package.json
+++ b/ts-gcp-docker-gcr-cloudrun-automation/cloud-run-deploy/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@pulumi/docker": "^3.0.0",
         "@pulumi/gcp": "^5.0.0",
+        "@pulumi/google-native": "^0.25.0",
         "@pulumi/pulumi": "^3.0.0"
     }
 }
