--- a/ts-gcp-docker-gcr-cloudrun-automation/gcr-build-image/Pulumi.dev.yaml
+++ b/ts-gcp-docker-gcr-cloudrun-automation/gcr-build-image/Pulumi.dev.yaml
@@ -3,3 +3,5 @@ config:
   cloud-run-deploy:imageStackName: gcr-build-image
   gcp:project: pulumi-ce-team
   gcp:region: us-central1
+  google-native:project: pulumi-ce-team
+  google-native:region: us-central1
