--- a/ts-gcp-docker-gcr-cloudrun-automation/gcr-build-image/package.json
+++ b/ts-gcp-docker-gcr-cloudrun-automation/gcr-build-image/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@pulumi/docker": "^3.0.0",
         "@pulumi/gcp": "^5.0.0",
-        "@pulumi/pulumi": "^3.0.0"
+        "@pulumi/pulumi": "^3.0.0",
+        "@pulumi/pulumiservice": "^0.1.8"
     }
 }
