--- a/py-aws-eks-helm-argo/requirements.txt
+++ b/py-aws-eks-helm-argo/requirements.txt
@@ -1,4 +1,4 @@
 pulumi>=3.0.0,<4.0.0
 pulumi-kubernetes>=3.0.0,<4.0.0
-pulumi-aws>=4.0.0,<5.0.0
-pulumi-aws>=0.0.0,<1.0.0
+pulumi-aws>=5.0.0,<6.0.0
+pulumi-eks>=0.0.0,<1.0.0
