--- a/py-aws-eks-helm-argo/k8s-deployments/Pulumi.dev.yaml
+++ b/py-aws-eks-helm-argo/k8s-deployments/Pulumi.dev.yaml
@@ -1,11 +1,11 @@
 config:
   aws:region: us-west-2
   eks_helm_argo_deployments:apps:
-  - app_name: sock-shop-c
+  - app_name: sock-shop-1
     app_repo_path: sock-shop
     app_repo_target_revision: HEAD
     app_repo_url: https://github.com/argoproj/argocd-example-apps
-  - app_name: guestbook-c
+  - app_name: guestbook-1
     app_repo_path: kustomize-guestbook
     app_repo_target_revision: HEAD
     app_repo_url: https://github.com/argoproj/argocd-example-apps
