--- a/guestbook-various-languages-clouds/guestbook-app-options/guestbook-app-ts/package.json
+++ b/guestbook-various-languages-clouds/guestbook-app-options/guestbook-app-ts/package.json
@@ -4,6 +4,7 @@
         "@types/node": "^14"
     },
     "dependencies": {
+        "@pulumi/aws": "^5.21.0",
         "@pulumi/k8s-servicedeployment": "file:../../../../../../Documents/demo-envs/customer-engineering/demos/multilanguage-packages/pulumi-k8s-servicedeployment/sdk/nodejs",
         "@pulumi/kubernetes": "^3.22.1",
         "@pulumi/pulumi": "^3.47.0",
