Moved apps config into project level config

--- a/py-aws-eks-helm-argo/k8s-deployments/Pulumi.yaml
+++ b/py-aws-eks-helm-argo/k8s-deployments/Pulumi.yaml
@@ -4,3 +4,14 @@ runtime:
   options:
     virtualenv: venv
 description: A minimal AWS Python Pulumi program
+config:
+  eks_helm_argo_deployments:apps:
+  - app_name: sock-shop-1
+    app_repo_path: sock-shop
+    app_repo_target_revision: HEAD
+    app_repo_url: https://github.com/argoproj/argocd-example-apps
+  - app_name: guestbook-1
+    app_repo_path: kustomize-guestbook
+    app_repo_target_revision: HEAD
+    app_repo_url: https://github.com/argoproj/argocd-example-apps
+  eks_helm_argo_deployments:base_stack_project: eks_helm_argo_base_infra
