--- a/cs-azure-loadbalancer-backendpools/Pulumi.yaml
+++ b/cs-azure-loadbalancer-backendpools/Pulumi.yaml
@@ -1,3 +1,3 @@
-name: arm-lb-backendpool-translation
+name: cs-azure-loadbalanced-vms
 runtime: dotnet
-description: A minimal Azure Native C# Pulumi program
+description: A Pulumi implementation of an ARM template that creates load balancer and VMs.
