implement some code to use secrets in config

--- a/py-unittesting-configuration-file/Pulumi.test_pass.yaml
+++ b/py-unittesting-configuration-file/Pulumi.test_pass.yaml
@@ -1,3 +1,4 @@
 config:
   gcp:project: pulumi-ce-team
-  python-unit-testing:byte_length: "8"
+  python-unit-testing:byte_length:
+    secure: AAABAN/+WqtsRoepBjlfI3fx13p4BfeymZWO6tx99/aP
