--- a/ts-gcp-serverless-pubsub-bigtable/multi-project/backend/package.json
+++ b/ts-gcp-serverless-pubsub-bigtable/multi-project/backend/package.json
@@ -6,6 +6,7 @@
     },
     "dependencies": {
         "@pulumi/gcp": "^6.0.0",
-        "@pulumi/pulumi": "^3.0.0"
+        "@pulumi/pulumi": "^3.0.0",
+        "@pulumi/pulumiservice": "^0.4.0"
     }
 }
