--- a/ts-gcp-serverless-pubsub-bigtable/package.json
+++ b/ts-gcp-serverless-pubsub-bigtable/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "@pulumi/gcp": "^6.0.0",
         "@pulumi/pulumi": "^3.0.0",
+        "@pulumi/pulumiservice": "^0.4.0",
         "@types/mocha": "^10.0.1",
         "mocha": "^10.2.0",
         "ts-node": "^10.9.1"
