--- a/ts-aws-api-lambda-eventbridge-lambda-dynamodb/lambda-eventbridge-dyndb/Pulumi.yaml
+++ b/ts-aws-api-lambda-eventbridge-lambda-dynamodb/lambda-eventbridge-dyndb/Pulumi.yaml
@@ -1,3 +1,6 @@
 name: lambda-eventbridge-dyndb
 runtime: nodejs
 description: A minimal AWS TypeScript Pulumi program
+config:
+  aws:region: us-east-2
+  lambda-eventbridge-dyndb:apigwProject: vpc-apigw
