some tweaks to ansible python

--- a/py-yaml-mlc-ansible-wordpress/aws-py-ansible-wordpress/requirements.txt
+++ b/py-yaml-mlc-ansible-wordpress/aws-py-ansible-wordpress/requirements.txt
@@ -4,4 +4,4 @@ pulumi-command>=0.3.0
 pulumi-pulumiservice>=0.1.8,<1.0.0
 ansible>=6.3.0
 ## This path needs to match where you built the "WpInstance" MLC
-../../../mlc-python-ec2_instance/sdk/python/bin
+../../../../mlc-python-ec2_instance/sdk/python/bin
