--- a/py-vpnconnection/Pulumi.dev.yaml
+++ b/py-vpnconnection/Pulumi.dev.yaml
@@ -7,14 +7,15 @@ config:
     - "10.1.1.0/24"
     - "10.1.2.0/24"
     - "10.1.3.0/24"
-  vpn:tenant_gbp_asn: "asn1"
+  vpn:tenant_gbp_asn: asn1
   vpn:tenant_id: mitch_bank
   vpn:tenant_public_ip: "10.10.10.10"
   vpn:transit_gateway_id: "123456"
-  # tunnel 1 config
   vpn:tunnel1_dpd_timeout_action: "none" # clear | none | restart.
   vpn:tunnel1_dpd_timeout_seconds: "30"
-  vpn:tunnel1_ike_versions: "ikev2" # ikev1 | ikev2
+  vpn:tunnel1_ike_versions:  # ikev1 | ikev2
+    - ikev1
+    - ikev2
   vpn:tunnel1_inside_cidr: 198.200.100.0/24"
   vpn:tunnel1_phase1_dh_group_numbers: # 2 | 5 | 14 | 15 | 16 | 17 | 18 | 19 | 20 | 21 | 22 | 23 | 24
     - 2
@@ -74,7 +75,9 @@ config:
   # tunnel 2 config
   vpn:tunnel2_dpd_timeout_action: "none" # clear | none | restart.
   vpn:tunnel2_dpd_timeout_seconds: "30"
-  vpn:tunnel2_ike_versions: "ikev2" # ikev1 | ikev2
+  vpn:tunnel2_ike_versions: # ikev1 | ikev2
+    - ikev1
+    - ikev2
   vpn:tunnel2_inside_cidr: 198.200.100.0/24"
   vpn:tunnel2_phase1_dh_group_numbers: # 2 | 5 | 14 | 15 | 16 | 17 | 18 | 19 | 20 | 21 | 22 | 23 | 24
     - 2
