--- a/ts-azure-oidc-env/ts-azure-storage/package.json
+++ b/ts-azure-oidc-env/ts-azure-storage/package.json
@@ -1,11 +1,6 @@
 {
-    "name": "ts-azure-deployment",
-    "main": "index.ts",
-    "devDependencies": {
-        "@types/node": "^16"
-    },
-    "dependencies": {
-        "@pulumi/pulumi": "^3.0.0",
-        "@pulumi/azure-native": "^2.0.0"
-    }
+  "dependencies": {
+    "@pulumi/azure-native": "^2.16.0",
+    "@pulumi/pulumi": "^3.93.0"
+  }
 }
