add second variant for blue-green

--- a/ts-blue-green/Pulumi.dev.yaml
+++ b/ts-blue-green/Pulumi.dev.yaml
@@ -2,3 +2,5 @@ config:
   aws:region: us-east-1
   # ts-blue-green:activeSystem: blue
   ts-blue-green:activeSystem: green
+  # See README about the different variants
+  ts-blue-green:variant: 2
