--- a/py-blue-green-apigw/blue-green-dns/Pulumi.prod.yaml
+++ b/py-blue-green-apigw/blue-green-dns/Pulumi.prod.yaml
@@ -1,5 +1,6 @@
 config:
   aws:region: us-east-1
   blue-green-dns:active_system_name: blue
+  # blue-green-dns:active_system_name: green 
 environment:
   - aws-oidc
