put cloudfronts3 into a module file

--- a/ts-aws-cdk-in-pulumi/package.json
+++ b/ts-aws-cdk-in-pulumi/package.json
@@ -8,8 +8,10 @@
     "dependencies": {
         "@aws-solutions-constructs/aws-cloudfront-s3": "^2.77.0",
         "@pulumi/aws": "^6.0.0",
+        "@pulumi/aws-native": "^1.25.0",
         "@pulumi/awsx": "^2.0.2",
         "@pulumi/cdk": "^1.7.0",
+        "@pulumi/cloudflare": "^5.49.0",
         "@pulumi/pulumi": "^3.113.0",
         "@types/mime-types": "^2.1.4",
         "fs": "^0.0.1-security",
