longer repo name

--- a/ts-deployment-schedules/Pulumi.yaml
+++ b/ts-deployment-schedules/Pulumi.yaml
@@ -2,7 +2,8 @@ name: deploy-sched-test
 runtime: nodejs
 description: A minimal TypeScript Pulumi program
 packages:
-  random-abstracted: https://github.com/mitchellgerdisch/component-random-abstracted@0.1.2
+  # random-abstracted: https://github.com/mitchellgerdisch/component-random-abstracted@0.1.2
+  random-abstracted: https://github.com/mitchellgerdisch/component-random-abstracted-more-name@0.1.2
 config:
   pulumi:tags:
     value:
