--- a/py-aws-assume-role/Pulumi.dev.yaml
+++ b/py-aws-assume-role/Pulumi.dev.yaml
@@ -1,3 +1,6 @@
+environment:
+  # Standard AWS OIDC provider based ESC environment
+  - aws/pulumi-ce
 config:
   assume-role:otherAccountBucket: mitch-assumerole-test
   assume-role:roleToAssumeARN: arn:aws:iam::420942475186:role/mitch-assumerole-test-role
