--- a/py-deployment-schedules/Pulumi.yaml
+++ b/py-deployment-schedules/Pulumi.yaml
@@ -2,7 +2,8 @@ name: deploy-sched-test-py
 runtime: python
 description: Python program that sets up it's own deployment settings and schedules
 packages:
-  random-abstracted: https://github.com/mitchellgerdisch/component-random-abstracted@0.1.2
+  stackmgmt: https://github.com/mitchellgerdisch/component-stackmgmt
+  # stackmgmt: https://github.com/pulumi-pequod/component-stackmgmt
 config:
   pulumi:tags:
     value:
